# GRLP-Network-Response-Periodic-Forcing

./: .zenodo.json  CITATION.cff  README.md  pyproject.toml
Analysis/: Compute_Valley_Properties.py  river_properties.py
Analysis/Network/: Figure_10_Network_Effective_Length_Controls.py  Figure_10_S5_S6_Network_Effective_Length_Controls.py  Figure_10_S8_S9_Network_Effective_Length_Controls.py  Figure_11_Network_Effective_Length_N1.py  Figure_12_Network_Example.py  Figure_12_Network_Spatial_Gain_Lag.py  Figure_12_S7_S8_S9_Network_Full_Gain_Lag.py  Figure_13_Network_Example.py  Figure_13_Network_Spatial_Gain_Lag.py  Figure_14_Network_Effective_Length_N1_Non-Uniform_Width.py  Figure_14_Network_Spatial_Gain_Lag.py  Figure_15_Network_Spatial_Gain_Lag_By_Mean_Length.py  (+24 more)
Plotting/: gmt_extras.sh
continuous/: continuous.py  continuous_example.py  continuous_instantaneous.py  continuous_periods.py  continuous_periods_B.py  continuous_setup.py  continuous_spatial.py  continuous_spatial_B.py  linear_test.py
network/: example_networks.py  extras.py  hack.py  lag_test.py  network_Le_calibration.py  network_Le_controls.py  network_Le_magnitude.py  network_Teq_controls.py  network_examples.py  network_full_sweep.py  network_single.py  network_spatial.py  process_glic.py  process_glic_individual.py  test.py  tokunaga.py
plotting/: continuous_setup.sh  continuous_spatial.ps  continuous_spatial.sh  example.ps  example_Le.ps  example_gain.ps  gmt.history  gmt_extras.sh  network_example.sh  network_example_Le.sh  network_example_gain_lag.sh  network_example_gif.sh  network_sweep_Le.sh  network_sweep_Le_Lm.sh  network_sweep_gain.sh  network_sweep_lag.sh  network_sweep_props.sh  p.cpt  psconvert_23809d.eps  scene0.ps  setup.ps  sweep_Le.ps  sweep_Le_Lm.ps  sweep_gain.ps  sweep_lag.ps  sweep_props.ps  x.cpt
src/: grlp_extras.py
(+7373 files in other folders)
