[build-system]
# requires = ["setuptools>=61.0"]
# build-backend = "setuptools.build_meta"
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
# [project]
name = "grlp_network_analysis"
version = "0.0.1"
authors = [
  "Fergus McNab"
]
description = "Perform GRLP network analyses for the paper McNab et al. (in prep.)."
readme = "README.md"
# requires-python = ">=3.7"
# dependencies = [
#   'grlp@git+https://github.com/MNiMORPH/GRLP#egg=network_building'
# ]
packages = [{include = "grlp_extras.py", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
grlp = { git =  "https://github.com/MNiMORPH/GRLP.git", tag = "v2.0.0-beta" }
numpy = "2.0.2"
scipy = "1.13.1"